--- a/style.css
+++ b/style.css
@@ -1,13 +1,30 @@
+.main-header {
+    background-color: rgba(241, 226, 15, 0.50);
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 2px;
+    padding-right: 2px;
+    border-bottom: 1px solid color black;
 
-h1{
-    text-align: center;
-    font-family: sans-serif, Arial, Helvetica, sans-serif;
-    margin-bottom: 5%;
-    
+}
+
+.git-image {
+    padding-block: 7px;
+
+
 }
 
 
-dl{
+h1 {
+    text-align: center;
+    font-family: sans-serif, Arial, Helvetica, sans-serif;
+    padding-top: 10px;
+    margin-left: 15%;
+    margin-right: 15%
+}
+
+
+dl {
     font-family: sans-serif, Arial, Helvetica, sans-serif;
     font-style: normal;
     font-size: medium;
@@ -15,21 +32,29 @@ dl{
     margin-left: 15%;
     margin-right: 15%;
     margin-bottom: 15%;
-     
+
 }
 
 dt {
-    width: 100px;
     padding: 4px 8px;
     font-weight: bold;
     text-align: left;
     margin-bottom: 1%;
-       
-  }
-  dd {
+
+}
+
+dd {
     text-align: left;
     margin-left: 10px;
     margin-bottom: 2.5%;
-    
-    
-  }
+
+
+}
+
+.footer {
+    font-family: sans-serif;
+    text-align: center padding-left: 0.5em;
+    background-size: cover;
+
+
+}
